src/objects/Merchandise__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <controllingField>Family__c</controllingField>
            <picklistValues>
                <fullName>SATA Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAID Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flash Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webcams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRTs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alarms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <picklist>
            <picklistValues>
                <fullName>Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Servicable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Servicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Available_Inventory__c</fullName>
        <label>Total Available Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Merchandise</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Merchandise Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I90000000o0e5EAA_00N90000004xBr1EAE</fullName>
        <active>true</active>
        <errorMessage>Please slect an Available item from Merchandise</errorMessage>
        <field>Warehouse_Product__c.Item__c</field>
        <filterItems>
            <field>Merchandise__c.Available__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Warehouse Product_Item</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000000o1LJEAY_00N90000004xFpjEAE</fullName>
        <active>true</active>
        <errorMessage>Please select an available Item</errorMessage>
        <field>Requested_Product__c.Item__c</field>
        <filterItems>
            <field>Merchandise__c.Available__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Requested Product_Item</name>
    </namedFilters>
    <pluralLabel>Merchandise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>